# data-eas-project

./: .gitignore  README.md  export.csv  fetch_article_metadata.py  paperswithcode.html  process-pdf.py  process_pdf.py  pyproject.toml  requirements.txt  result.xml
archive/: metadataCrawler.py
crawlers/: fetchArticleMetadata.py  getReferencesArticles.py  papersWithCodeCrawler.py  processPdf.py  recursiveCrawler.py  saveIdToGraphDb.py  saveToGraphDb.py  testNeo4jConnection.py  utils.py
sql/: create_table.sql  insert_values.sql  query.sql
src/: SaveMetadataToDb.py  fetchArticleMetadata.py  getReferencesArticles.py  metadataCrawler.py  papersWithCode.py  process-pdf.py  processPdf.py  recursiveCrawler.py  saveIdToGraphDb.py  saveToGraphDb.py  testNeo4jConnection.py  utils.py
